# StrukturyDanych

./: .gitignore
Kolejki/: CMakeLists.txt  README.md
Kolejki/include/: IQueue.hpp  PriorityQueueTree.hpp  PriorityQueueVectorSorted.hpp  Queue.hpp
Kolejki/include/efficency_test/: EfficencyTest.hpp
Kolejki/include/factory/: IQueueFactory.hpp  PriorityQueueTreeFactory.hpp  PriorityQueueVectorSortedFactory.hpp
Kolejki/include/queue/: PriorityQueueTree.hpp  PriorityQueueVectorSorted.hpp
Kolejki/include/sort/: Timsort.hpp
Kolejki/src/: main.cpp
Kolejki/src/efficency_test/: EfficencyTest.cpp
Kolejki/tests/: CMakeLists.txt  QueueTreeTest.cpp  QueueVectorTest.cpp  TimSortTest.cpp
Listy/: README.md
Listy/analiza/: analiza_danych.ipynb
Listy/include/: DoublyLinkedList.hpp  DynamicTable.hpp
Listy/src/: main.cpp
